--- a/CorteCaja/CorteCaja/Views/Shared/_Layout.cshtml
+++ b/CorteCaja/CorteCaja/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @*<link href="~/Scripts/dataTable/css/datatables.min.css" rel="stylesheet" />*@
+    <link href="~/Scripts/dataTable/css/datatables.min.css" rel="stylesheet" />
     @*<link href="~/Scripts/AngularJS/assets/ng-table.min.css" rel="stylesheet" />*@
     @*<link href="~/Scripts/AngularJS/assets/buttons.dataTables.min.css" rel="stylesheet" />*@
-    <link href="~/Scripts/dataTables/css/jquery.dataTables.css" rel="stylesheet" />
+    @*<link href="~/Scripts/dataTables/css/jquery.dataTables.css" rel="stylesheet" />*@
     <link href="~/Scripts/i18n/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body ng-app="Cash">
